# Tiger-Compiler

./: .gitignore  CMakeLists.txt  MobaXterm_106.14.177.227_20180531_211605.rtf  canon_tree.txt  debugAssem.s  debugAssemBeforeAlloc.s  debugGraph.txt  instr_b4_allocation.txt  instr_b4_allocation_cop.txt  instructionAssem.s  instructionAssem.txt  ir_tree.txt  ir_vis.txt  linear_tree.txt  makefile  parsetest.tig  queens.tig  readme.md  tigerMain.s  tigerMainL.s
customtests/: cjump.tig  factorial.tig  func.tig  intarray.tig  intlist.tig  isprime.tig  isprime_simple.tig  merge.tig  plus.tig  queens.tig  readint.tig  redeclare.tig  spill.tig  stdlib.tig  sum.tig  tree.tig
include/: Semant.h  absyn.h  assem.h  canon.h  codegen.h  color.h  env.h  escape.h  flowgraph.h  frame.h  graph.c  graph.h  liveness.c  liveness.h  regalloc.h  symbol.h  table.h  temp.h  translate.h  tree.h  types.h  util.h  y.tab.h
lib/: libtiger.c  libtiger.s  test.s  tigerMain.c  tigerMain.s
src/: absyn.c  assem.c  canon.c  codegen_mips.c  color.c  env.c  errormsg.c  escape.c  flowgraph.c  frame_mips.c  frame_x86.c  graph.c  lex.yy.c  liveness.c  main.c  parsetest.c  regalloc.c  semant.c  symbol.c  table.c  temp.c  tiger.lex  tiger.y  translate.c  tree.c  types.c  util.c  y.tab.c
testcases/: merge.tig  test3.tig  test50.tig  test51.tig
visualization/: index.html  index.js  ir_vis.txt  main.css
